# funguy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
api/: README.md  requirements.txt
api/funguy_api/: admin.py  apps.py  models.py  serializers.py  urls.py
api/funguy_api/views/: brew.py  command.py  utils.py  views.py
api/funguy_backend/: asgi.py  settings.py
backend/: Dockerfile  README.md
backend/funguy_api/: admin.py  models.py  serializers.py  urls.py
backend/funguy_api/views/: command.py  views.py
backend/funguy_backend/: settings.py
client/windows-client/: Cargo.toml  README.md
client/windows-client/src/: commands.rs  keylogger.rs  main.rs  node.rs  utils.rs
funguy_api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
funguy_api/views/: brew.py  command.py  utils.py  views.py
funguy_backend/: settings.py  urls.py  wsgi.py
